mockiato_codegen/tests/ui/non-method-items.stderr
error: Traits are currently only allowed to contain traits
 --> $DIR/non-method-items.rs:9:5
  |
9 |     const BAR: usize;
  |     ^^^^^
  |
note: Required because of #[mockable] on the trait declaration
 --> $DIR/non-method-items.rs:8:1
  |
8 | trait Foo {
  | ^^^^^

error: Traits are currently only allowed to contain traits
  --> $DIR/non-method-items.rs:11:5
   |
11 |     type Baz;
   |     ^^^^
   |
note: Required because of #[mockable] on the trait declaration
  --> $DIR/non-method-items.rs:8:1
   |
8  | trait Foo {
   | ^^^^^

error: Traits are currently only allowed to contain traits
  --> $DIR/non-method-items.rs:13:5
   |
13 |     macro_in_trait!();
   |     ^^^^^^^^^^^^^^
   |
note: Required because of #[mockable] on the trait declaration
  --> $DIR/non-method-items.rs:8:1
   |
8  | trait Foo {
   | ^^^^^

error: aborting due to 3 previous errors

